<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboard.OnBoardingActivity">

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="100dp"
        android:layout_height="61dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="sans-serif-medium"
        android:padding="5dp"
        android:text="@string/next"
        android:textColor="#A8F28832"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="112dp"
        android:layout_height="57dp"
        android:layout_marginEnd="292dp"
        android:layout_marginBottom="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="sans-serif-medium"
        android:padding="5dp"
        android:text="@string/back"
        android:textColor="#A8F28832"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="sans-serif-medium"
        android:text="@string/skip"
        android:textColor="#A8F28832"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onBoardingSlider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSkip"
        app:layout_constraintBottom_toTopOf="@+id/indicator_layout" />

    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ellipse"
        app:layout_constraintBottom_toTopOf="@+id/onBoardingSlider"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
